--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "nunjucks": "^3.1.3",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "validator": "^10.4.0"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
